fix: adjusting tertiary delete button and making loading z-index change global

--- a/frontend/src/styles/custom.scss
+++ b/frontend/src/styles/custom.scss
@@ -413,6 +413,21 @@ label.#{vars.$bcgov-prefix}--label--disabled {
   color: var(--#{vars.$bcgov-prefix}-button-danger-secondary, colors.$red-70);
 }
 
+.danger-tertiary-btn:hover,
+.danger-tertiary-btn:active {
+  background-color: var(--#{vars.$bcgov-prefix}-button-danger-secondary, colors.$red-70);
+}
+
+.danger-tertiary-btn:focus {
+  background-color: var(--#{vars.$bcgov-prefix}-button-danger-secondary, colors.$red-70);
+  box-shadow: inset 0 0 0 1px var(--bx-button-focus-color, colors.$red-70), inset 0 0 0 2px var(--bx-background, #FFFFFF);
+  border-color: colors.$red-70;
+}
+
 .ul-disc {
   list-style-type: disc;
+}
+
+.#{vars.$bcgov-prefix}--loading-overlay {
+  z-index: 10000;
 }
